--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,7 @@ main .form form{
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    height: 750px;
+    height: 90%;
     width: 100%;
     padding: 40px 40px;
     border-radius: 15px;
